ocp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app-deployment
  labels:
    app: fastapi-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app-deployment
  template:
    metadata:
      labels:
        app: fastapi-app-deployment
    spec:
      containers:
      - name: fastapi-quickstart-ctr
        image: image-registry.openshift-image-registry.svc:5000/ocp-fastapi-quickstart-project/fastapi-quickstart-img:1.0
        ports:
        - containerPort: 8000
