ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-svc
  labels:
    app: fastapi-app
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: fastapi-app-deployment
  sessionAffinity: None
  type: ClusterIP
