ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fastapi-app-route
  labels:
    app: fastapi-app
spec:
  port:
    targetPort: 8000
  to:
    kind: Service
    name: fastapi-app-svc
    weight: 100
  wildcardPolicy: None
